<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/common_bg" >

    <include
        android:id="@id/title_bar"
        layout="@layout/commom_title_bar" />

    <LinearLayout
        android:id="@+id/lil_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:background="#fffde5"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_service_hint"
            android:textColor="#d69200"
            android:textSize="@dimen/F3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artificial_servicehint_sf"
            android:textColor="@color/C5"
            android:textSize="@dimen/F3" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lil_hint"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/C8"
        android:textSize="@dimen/F5"
        android:drawableLeft="@drawable/contact_icon_rectangle"
        android:drawablePadding="5dp"
        android:text="@string/artificial_service" />

    <TextView
        android:id="@+id/tv_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/C6"
        android:textSize="@dimen/F3"
        android:layout_alignBottom="@+id/tv_big"
        android:layout_marginLeft="9dp"
        android:layout_toRightOf="@+id/tv_big"
        android:text="@string/artificial_servicehint" />

    <TextView
        android:id="@+id/tv_smallnumber"
        android:textSize="@dimen/F3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_big"
        android:layout_toRightOf="@+id/tv_small"
        android:text="@string/artificial_servicehint_number"
        android:textColor="#ff4d61" />

    <RelativeLayout
        android:id="@+id/customer_service_online_lil"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/tv_big"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/comsuggest_btn_selecter" >

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/C6"
            android:layout_centerInParent="true"
            android:text="@string/customer_online" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/tv_top"
            android:scaleType="centerInside"
            android:src="@drawable/contact_icon_message" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/customer_service_phone_fram"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/customer_service_online_lil"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/comsuggest_btn_selecter" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_1"
                android:textSize="20sp"
            	android:textColor="@color/C6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/customer_service_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/F5"
                android:textColor="#20c2c9"
                android:layout_alignLeft="@id/tv_1"
                android:layout_below="@id/tv_1"
                android:text="@string/customer_service_phone_number" />

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="8.5dp"
                android:layout_toLeftOf="@id/tv_1"
                android:scaleType="centerInside"
                android:src="@drawable/contact_icon_call" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>