<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:padding="10dp" >

    <TextView
        android:id="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="@dimen/F4"
        android:textColor="@color/C6"
        android:background="@drawable/bg_white_12dp_round_top"
        android:gravity="center"
        android:text="@string/choose_sex" />

    <TextView
        android:id="@+id/tv_option1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textColor="@color/C8"
        android:textSize="@dimen/F6"
        android:layout_below="@id/tv_title"
        android:background="@drawable/bg_white_12dp_round_center"
        android:gravity="center"
        android:text="@string/boy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignTop="@id/tv_option1"
        android:background="@color/devider_line" />

    <TextView
        android:id="@+id/tv_option2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textColor="@color/C8"
        android:textSize="@dimen/F6"
        android:layout_below="@id/tv_option1"
        android:background="@drawable/bg_white_12dp_round_bottom"
        android:gravity="center"
        android:text="@string/girl" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignTop="@id/tv_option2"
        android:background="@color/devider_line" />

</RelativeLayout>