<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg" >

    <include
        android:id="@id/title_bar"
        layout="@layout/commom_title_bar" />

    <cn.softbank.purchase.widget.MyEditText
        android:id="@id/et_phone"
        style="@style/common_et"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="10dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11" />

    <View
        style="@style/common_divider_line"
        android:layout_below="@id/et_phone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <cn.softbank.purchase.widget.MyEditText
        android:id="@id/et_password"
        style="@style/common_et"
        android:layout_below="@id/et_phone"
        android:layout_marginTop="1px"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLength="16" />
    
    <LinearLayout 
        android:id="@+id/ll_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        
        <cn.softbank.purchase.widget.MyCheckBox
            android:id="@id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            app:checkOffImg="@drawable/login_check_off"
            app:checkOnImg="@drawable/login_check_on"
            app:isAutoChange="true"
            app:isChecked="true" />
        
        <TextView
            android:id="@+id/tv_argeement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读掌房通用户登录协议"
            android:textColor="@color/title_bg" />
        
    </LinearLayout>

    <Button
        android:id="@id/bt_ok"
        style="@style/bt_gray"
        android:layout_below="@id/ll_agreement"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_hang_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bt_ok"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/hang_out"
        android:textColor="@color/C7"
        android:textSize="@dimen/F3" />

</RelativeLayout>