<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:editdraw="http://schemas.android.com/apk/res/cn.yicheng.jingjiren"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg" >

        <TextView
            android:id="@id/bt_title_left"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_back_arrow"
            android:paddingLeft="15dip"
            android:paddingRight="16.0dip" />

        <TextView
            android:id="@id/bt_title_right"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="5dip"
            android:paddingRight="15dip"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="@dimen/F5"
            android:visibility="gone" />

        <cn.softbank.purchase.widget.MyEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/bt_title_right"
            android:layout_toRightOf="@id/bt_title_left"
            android:background="@drawable/bg_search"
            android:drawablePadding="10dp"
            android:hint="@string/search_goods"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/C8"
            android:textColorHint="@color/C5"
            android:textSize="@dimen/F5"
            editdraw:editDrawableLeft="@drawable/mmh_icon_search" >
        </cn.softbank.purchase.widget.MyEditText>
    </RelativeLayout>

    <View
        android:id="@id/divider_line1"
        style="@style/common_divider_line"
        android:layout_below="@id/title_bar" />

    <ListView
        android:id="@+id/listview_lianxiang"
        style="@style/common_list_view"
        android:layout_below="@id/divider_line1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" >
    </ListView>

    <RelativeLayout
        android:id="@+id/view_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_line1" >

        <TextView
            android:id="@+id/tv_hot_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/hot"
            android:textColor="@color/C6"
            android:textSize="@dimen/F5" />

        <cn.softbank.purchase.widget.HotWordView
            android:id="@id/hot_word_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hot_tag" />

        <TextView
            android:id="@+id/tv_history_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hot_word_view"
            android:layout_margin="15dp"
            android:text="@string/search_history"
            android:textColor="@color/C6"
            android:textSize="@dimen/F5" />

        <View
            android:id="@id/divider_line2"
            style="@style/common_divider_line"
            android:layout_below="@id/tv_history_tag" />

        <ListView
            android:id="@id/listview"
            style="@style/common_list_view"
            android:layout_below="@id/divider_line2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" >
        </ListView>

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listview"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/mmh_icon_delte"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/tv_search_clear"
            android:textColor="@color/C6"
            android:textSize="@dimen/F5" />

        <View
            android:id="@id/divider"
            style="@style/common_divider_line"
            android:layout_above="@id/tv_clear" />
    </RelativeLayout>

</RelativeLayout>